--- a/ims-frontend/src/components/Orders/Orders.module.css
+++ b/ims-frontend/src/components/Orders/Orders.module.css
@@ -76,19 +76,20 @@
     color: green;
 }
 
-.cancel_icon,.delete_icon{
+.cancel_icon{
     margin:5px;
     padding:3px;
     color: tomato;
     cursor: pointer;
 }
+
 .order_item{
     display:'flex';
     align-items: center;
 }
 
 .edit_icon:hover,.save_icon:hover,.cancel_icon:hover{
-    box-shadow: 0 0 4px 2px rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px 4px rgba(0,0,0,0);
     cursor: pointer;
     border-radius: 15px;
 }
